Fix(front): Fix various tag alignment issues for small screens
Fix branchname overflow on small screens

Add xs screen size

Make buildcards friendly for xs screens

--- a/web/src/assets/_breakpointMixins.scss
+++ b/web/src/assets/_breakpointMixins.scss
@@ -1,3 +1,10 @@
+// Smaller devices
+@mixin xs {
+  @media (min-width: #{$screen-xs-min}) {
+    @content;
+  }
+}
+
 // Small devices
 @mixin sm {
   @media (min-width: #{$screen-sm-min}) {
