--- a/web/src/assets/_variables.scss
+++ b/web/src/assets/_variables.scss
@@ -2,6 +2,8 @@
 
 $font-stack: 'Open Sans', sans-serif;
 
+$screen-xs-min: 320px;
+
 // Small tablets and large smartphones (landscape view)
 $screen-sm-min: 576px;
 
